MyFirstProject/src/objects/DateComparision__c.object
<CustomObject>
    <fields>
        <fullName>DateBetween__c</fullName>
        <formula>EndDate__c -  StartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateBetween</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <label>DateComparision</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EndDate__c</columns>
        <columns>StartDate__c</columns>
        <columns>DateBetween__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DateComparision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DatesComparision</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EndDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c  &gt;=  EndDate__c</errorConditionFormula>
        <errorDisplayField>EndDate__c</errorDisplayField>
        <errorMessage>End Date Should be greater then Start date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c    &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start date Should be less then current date</errorMessage>
    </validationRules>
</CustomObject>